[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "combiner"
version = "0.1.0"
description = "A tool to combine and spread files across directories"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Combiner Contributors"}
]
keywords = ["file", "combiner", "spread", "encode", "decode", "utility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pathspec>=0.12.1",
    "termcolor>=2.4.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]


[project.scripts]
combiner = "combiner.cli:main"


[project.urls]
Homepage = "https://github.com/yourusername/combiner"
"Bug Reports" = "https://github.com/yourusername/combiner/issues"
Source = "https://github.com/yourusername/combiner"


[tool.setuptools]
packages = ["combiner"]


[tool.setuptools.package-data]
combiner = ["py.typed"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=combiner",
    "--cov-report=term-missing",
    "--cov-report=html",
]


[tool.coverage.run]
source = ["combiner"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]


[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]


[tool.coverage.html]
directory = "htmlcov"





